--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export("%>%")
 export(wbp_region_list)
 export(wpb_list)
 export(wpb_series)
-export(wpb_tables)
+export(wpb_table)
 import(rnaturalearthdata)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,everything)
