--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(wpb_list)
 export(wpb_series)
 export(wpb_table)
 import(rnaturalearthdata)
+importFrom(data.table,":=")
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,everything)
 importFrom(dplyr,full_join)
