--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,13 +11,14 @@ Maintainer: Danilo Freire <danilofreire@gmail.com>
 Description: Download, parses and tidies information from the World Prison Brief project <http://www.prisonstudies.org/>. 
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+LazyData: yes
 Depends:
     R (>= 3.0)
-Imports: 
+Imports:
     httr (>= 1.2.1),
     tibble (>= 1.3.3),
     dplyr (>= 0.5.0),
+    data.table(>= 1.10.4),
     magrittr (>= 1.5),
     rvest (>= 0.3.2),
     xml2 (>= 1.1.1),
@@ -27,3 +28,4 @@ Imports:
     rnaturalearth (>= 0.1.0),
     rnaturalearthdata (>= 0.1.0)
 RoxygenNote: 6.0.1
+Suggests: testthat
