--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(httr,GET)
 importFrom(magrittr,"%>%")
-importFrom(magrittr,"'")
 importFrom(magrittr,set_colnames)
 importFrom(passport,as_country_name)
 importFrom(passport,parse_country)
@@ -25,6 +24,7 @@ importFrom(rnaturalearth,ne_countries)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(rvest,html_text)
+importFrom(stringr,replace_all)
 importFrom(tibble,tibble)
 importFrom(tidyr,spread)
 importFrom(xml2,read_html)
