--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(wpb_list)
 export(wpb_series)
 export(wpb_table)
 import(rnaturalearthdata)
-importFrom(data.table,":=")
+importFrom(data.table,':=')
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,everything)
 importFrom(dplyr,full_join)
@@ -16,6 +16,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(httr,GET)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,'%>%')
 importFrom(magrittr,set_colnames)
 importFrom(passport,as_country_name)
 importFrom(passport,parse_country)
@@ -24,7 +25,7 @@ importFrom(rnaturalearth,ne_countries)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(rvest,html_text)
-importFrom(stringr,replace_all)
+importFrom(stringr,str_replace_all)
 importFrom(tibble,tibble)
 importFrom(tidyr,spread)
 importFrom(xml2,read_html)
