--- a/.github/workflows/rcmdcheck.yaml
+++ b/.github/workflows/rcmdcheck.yaml
@@ -23,7 +23,7 @@ jobs:
       RSPM: ${{ matrix.config.rspm }}
     steps:
       - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@main
+      - uses: r-lib/actions/setup-r@master
         with:
           r-version: ${{ matrix.config.r }}
       - name: Install dependencies
@@ -74,7 +74,7 @@ jobs:
 
       - name: Upload check results
         if: failure()
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@master
         with:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
