--- a/.github/workflows/rcmdcheck.yaml
+++ b/.github/workflows/rcmdcheck.yaml
@@ -14,10 +14,6 @@ jobs:
           - {os: macOS-latest,   r: '4.0'}
           - {os: windows-latest, r: '4.0'}
           - {os: ubuntu-16.04,   r: '4.0', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.6', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.5', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.4', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
-          - {os: ubuntu-16.04,   r: '3.3', rspm: "https://packagemanager.rstudio.com/cran/__linux__/xenial/latest"}
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
@@ -43,10 +39,10 @@ jobs:
           sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
           sudo -s eval "$sysreqs"
 
-      # - name: Install macOS dependencies
-      #   if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'devel'
-      #   run: |
-      #     brew install mariadb-connector-c
+      - name: Install macOS dependencies
+        if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'devel'
+        run: |
+          brew install mariadb-connector-c
 
       - name: Install dependencies
         run: |
