--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(wpb_region_list)
 export(wpb_series)
 export(wpb_table)
 import(rnaturalearthdata)
+import(sf)
 importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
 importFrom(dplyr,contains)
 importFrom(dplyr,everything)
 importFrom(dplyr,full_join)
